force-app/main/default/objects/Participante__c/Participante__c.object-meta.xml
<CustomObject>
    <label>Participante</label>
    <nameField>
        <label>Nombre de Participante de la compra</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participantes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>