force-app/main/default/objects/Participante__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participantes</relationshipLabel>
    <relationshipName>Participantes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>