force-app/main/default/objects/Participante__c/fields/CONGA_TxtTit__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtTit__c</fullName>
    <formula>IF(Cliente__r.RecordType.DeveloperName = &apos;PersonAccount&apos; , &apos;Don/Dña. &apos; + 
   IF(OR(ISBLANK(Cliente__r.FirstName),ISNULL(Cliente__r.FirstName)),&apos; __________ &apos;, Cliente__r.FirstName) + &apos; &apos; + 
   IF(OR(ISBLANK(Cliente__r.LastName),ISNULL(Cliente__r.LastName)),&apos; __________ &apos;, Cliente__r.LastName) + &apos;en estado&quot;&apos; + 
   IF(OR(ISBLANK(TEXT(Cliente__r.Regimen__c)),ISNULL(TEXT(Cliente__r.Regimen__c))),&apos; __________ &apos;, TEXT(Cliente__r.Regimen__c)) + &apos;&quot; y un porcentaje de participación del &apos; +  
   IF(OR(ISBLANK(TEXT(Porcentaje_de_participacion__c)),ISNULL(TEXT(Porcentaje_de_participacion__c))),&apos; __________ &apos;, TEXT(Porcentaje_de_participacion__c*100)) + &apos;%&apos;
, &apos;&apos;) +
IF( Cliente__r.RecordType.DeveloperName = &apos;Cuenta&apos;, IF(OR(ISBLANK(Cliente__r.Name),ISNULL(Cliente__r.Name)),&apos; __________ &apos;, Cliente__r.Name) + &apos;, &apos; 
,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtTit</label>
    <type>Text</type>
</CustomField>