force-app/main/default/objects/Participante__c/fields/CONGA_TxtTitFin__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtTitFin__c</fullName>
    <formula>IF(Cliente__r.RecordType.DeveloperName = &apos;PersonAccount&apos;, &apos;Don/Dña. &apos; + IF(OR(ISBLANK(Cliente__r.FirstName),ISNULL(Cliente__r.FirstName)),&apos; __________ &apos;,Cliente__r.FirstName) + &apos; &apos; + IF(OR(ISBLANK(Cliente__r.LastName),ISNULL(Cliente__r.LastName)),&apos; __________ &apos;,Cliente__r.LastName) + &apos;, mayor de edad, con domicilio en &apos; + IF(OR(ISBLANK(TEXT(Cliente__r.DP_Tipo_de_vIa__c)),ISNULL(TEXT(Cliente__r.DP_Tipo_de_vIa__c))),&apos; __________ &apos;, TEXT(Cliente__r.DP_Tipo_de_vIa__c)) + &apos; &apos; + IF(OR(ISBLANK(Cliente__r.DP_Nombre_via__c),ISNULL(Cliente__r.DP_Nombre_via__c)),&apos; __________ &apos;, Cliente__r.DP_Nombre_via__c) + &apos;, numero &apos; + IF(OR(ISBLANK(Cliente__r.NumeroViaText__c),ISNULL(Cliente__r.NumeroViaText__c)),&apos; __________ &apos;, Cliente__r.NumeroViaText__c) + &apos; CP &apos; + IF(OR(ISBLANK(Cliente__r.DP_Codigo_postal__c),ISNULL(Cliente__r.DP_Codigo_postal__c)),&apos; __________ &apos;, Cliente__r.DP_Codigo_postal__c) + &apos;, &apos; + IF(OR(ISBLANK(TEXT(Cliente__r.Tipo_de_documento__c)), ISNULL(TEXT(Cliente__r.Tipo_de_documento__c))),&apos; __________ &apos;,TEXT(Cliente__r.Tipo_de_documento__c)) + &apos; num. &apos; + IF(OR(ISBLANK(Cliente__r.N_Documento__c),ISNULL(Cliente__r.N_Documento__c)),&apos; __________ &apos;,Cliente__r.N_Documento__c) + &apos;, con nº de teléfono &apos; + IF(OR(ISBLANK(Cliente__r.Phone),ISNULL(Cliente__r.Phone)),&apos; __________ &apos;,Cliente__r.Phone) + &apos; y correo electrónico &apos; + IF(OR(ISBLANK(Cliente__r.PersonEmail),ISNULL(Cliente__r.PersonEmail)),&apos; __________ &apos;,Cliente__r.PersonEmail) + &apos;, &apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtTitFin</label>
    <type>Text</type>
</CustomField>