force-app/main/default/objects/Participante__c/fields/CONGATextTitularesPersonaFisica__c.field-meta.xml
<CustomField>
    <fullName>CONGATextTitularesPersonaFisica__c</fullName>
    <formula>IF(
Cliente__r.RecordType.DeveloperName = &apos;PersonAccount&apos;,
&apos;Don/Dña. &apos; + IF( OR(ISBLANK(Cliente__r.FirstName),ISNULL(Cliente__r.FirstName)),&apos; ________ &apos;,Cliente__r.FirstName)
+ &apos; &apos; +
IF(OR(ISBLANK(Cliente__r.LastName),ISNULL(Cliente__r.LastName)),&apos; _______ &apos;,Cliente__r.LastName) +
&apos;, mayor de edad, con &apos; +
IF(OR(ISBLANK(TEXT(Cliente__r.Tipo_de_documento__c)), ISNULL(TEXT(Cliente__r.Tipo_de_documento__c))),&apos; _____ &apos;,TEXT(Cliente__r.Tipo_de_documento__c))
+ &apos; num. &apos; +
IF(OR(ISBLANK(Cliente__r.N_Documento__c),ISNULL(Cliente__r.N_Documento__c)),&apos; ______ &apos;,Cliente__r.N_Documento__c)
+ &apos;, con domicilio en &apos; +
IF(AND(ISBLANK(Cliente__r.DF_Nombre_via__c),ISBLANK(Cliente__r.DP_Nombre_via__c),ISBLANK( Cliente__r.NumeroVia2Text__c ),ISBLANK(Cliente__r.NumeroViaText__c),ISBLANK(Cliente__r.DF_Codigo_postal__c),ISBLANK(Cliente__r.DP_Codigo_postal__c)),
(Cliente__r.DireccionExtranjeraPB__c),
IF(AND(ISBLANK(TEXT(Cliente__r.DF_Tipo_de_via__c)),ISBLANK(Cliente__r.DF_Nombre_via__c),ISBLANK( Cliente__r.NumeroVia2Text__c ),ISBLANK(Cliente__r.DF_Codigo_postal__c),ISBLANK(Cliente__r.DF_Provincia__c)),
TEXT(Cliente__r.DP_Tipo_de_vIa__c)+&apos; &apos;+(Cliente__r.DP_Nombre_via__c)+&apos;, número &apos;+ (Cliente__r.NumeroViaText__c) +&apos;, CP &apos;+ (Cliente__r.DP_Codigo_postal__c)+&apos;, localidad &apos;+ (Cliente__r.DP_Localidad__r.Name)+&apos;, provincia de &apos;+ (Cliente__r.DP_Localidad__r.Provincia__r.Name),
TEXT(Cliente__r.DF_Tipo_de_via__c)+&apos; &apos;+(Cliente__r.DF_Nombre_via__c)+&apos;, número &apos;+ (Cliente__r.NumeroViaText__c) +&apos;, CP &apos;+ (Cliente__r.DF_Codigo_postal__c)+&apos;, localidad &apos;+ (Cliente__r.DF_Localidad__r.Name)+&apos;, provincia de &apos;+ (Cliente__r.DF_Localidad__r.Provincia__r.Name)
)
) + &apos;, en estado civil&apos; + &apos; &apos; + IF(OR(ISBLANK(TEXT(Cliente__r.Estado_Civil__pc)),ISNULL(TEXT(Cliente__r.Estado_Civil__pc))),&apos; ______ &apos;, TEXT(Cliente__r.Estado_Civil__pc)),&apos;&apos;) + &apos; &apos; +&apos;en régimen &apos; + &apos; &apos; + Text(Cliente__r.Regimen__c)+&apos;.&apos;</formula>
    <label>CONGA Text Titulares Persona Física</label>
    <type>Text</type>
</CustomField>