force-app/main/default/objects/Participante__c/fields/CONGATextTitularesPersonaJuridica__c.field-meta.xml
<CustomField>
    <fullName>CONGATextTitularesPersonaJuridica__c</fullName>
    <formula>&apos;estado civil&apos;+ &apos; &apos; + Text(Cliente__r.ContactoPrincipal__r.Estado_Civil__pc) + &apos; &apos; + &apos;y domicilio en&apos; + &apos; &apos; + Text(Cliente__r.ContactoPrincipal__r.Tipo_via__pc)+ &apos; &apos; + (Cliente__r.ContactoPrincipal__r.Nombre_via__pc) + &apos; &apos; + Text(Cliente__r.ContactoPrincipal__r.Numero_via__pc)+ &apos;,&apos; + &apos; &apos; + &apos;escalera &apos;+(Cliente__r.ContactoPrincipal__r.Escalera__pc)+ &apos; &apos; + &apos;piso&apos; + &apos; &apos; + Text(Cliente__r.ContactoPrincipal__r.N_Piso__pc) + &apos; &apos; + &apos;puerta&apos; + &apos; &apos; + (Cliente__r.ContactoPrincipal__r.Puerta__pc) + &apos;,&apos; + &apos; &apos; + &apos;CP;&apos; + &apos; &apos; + (Cliente__r.ContactoPrincipal__r.Codigo_postal__pc)+ &apos;,&apos; + &apos; &apos; + (Cliente__r.ContactoPrincipal__r.Localidad_FISCAL__r.Name)+ &apos; provincia de&apos; + &apos; &apos; + (Cliente__r.ContactoPrincipal__r.Localidad_FISCAL__r.Provincia__r.Name)+ &apos;,&apos; + &apos; &apos; + (Cliente__r.ContactoPrincipal__r.Pais_FISCAL__r.Name)+ &apos; &apos; +&apos;y correo electrónico&apos; + &apos; &apos; +(Cliente__r.ContactoPrincipal__r.PersonEmail)</formula>
    <label>CONGA Text Titulares Persona Jurídica</label>
    <type>Text</type>
</CustomField>