force-app/main/default/objects/Participante__c/fields/Numero_de_mandato_SEPA__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_mandato_SEPA__c</fullName>
    <formula>Cliente__r.N_Documento__c + Opportunity__c +
LEFT(&apos;00000000000&apos;,35-LEN(Cliente__r.N_Documento__c + Opportunity__c + TEXT (IF(Opportunity__r.Secuencial_Cuenta_Bancaria__c - 1 &lt; 0, 0, Opportunity__r.Secuencial_Cuenta_Bancaria__c - 1)))) +
TEXT(IF(Opportunity__r.Secuencial_Cuenta_Bancaria__c &lt; 0, 0, Opportunity__r.Secuencial_Cuenta_Bancaria__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de mandato SEPA</label>
    <type>Text</type>
</CustomField>