force-app/main/default/objects/Participante__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Participantes (Opportunity)</relationshipLabel>
    <relationshipName>Participantes1</relationshipName>
    <type>Lookup</type>
</CustomField>