force-app/main/default/objects/Participante__c/fields/Porcentaje_de_participacion__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_participacion__c</fullName>
    <label>Porcentaje de participación</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>